--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         <!-- Magnific Popup Css -->
         <link rel="stylesheet" href="assets/css/magnific-popup.css">
         <!-- Colors Css -->
-        <link rel="stylesheet" href="assets/css/color/red-color.css" id="option-color">
+        <link rel="stylesheet" href="assets/css/color/blue-color.css" id="option-color">
         <!--  Custom Style CSS  -->
         <link rel="stylesheet" href="assets/css/main.css">
     </head>
-    <body data-spy="scroll" data-target="#scrollspy" data-offset="1" class="arshia-dark flat-demo">
+    <body data-spy="scroll" data-target="#scrollspy" data-offset="1" class="arshia-light flat-demo">
 
     <!--  Pre Loader  -->
     <div id="overlayer"></div>
