--- a/index.html
+++ b/index.html
@@ -305,10 +305,9 @@
                 <span>Follow Me</span>
             </div>
             <div class="social">
-                <a href="https://www.facebook.com/profile.php?id=100009190071876" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="javascript:void(0);"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
                 <!-- <a href="javascript:void(0);"><i class="fa fa-github"></i></a> -->
-                <a href="javascript:void(0);"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/eaindarey-ju-ju-18b526143/" target="_blank"><i class="fa fa-linkedin"></i></a>
             </div>
         </div>
 
