--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
                                 </div>
                             </div>
                             <!-- Item 01 -->
-                            <div class="col-lg-4 portfolio-item webdesign active">
+                            <!-- <div class="col-lg-4 portfolio-item webdesign active">
                                 <div class="image-border">
                                     <div class="portfolio-item-content">
                                         <img src="assets/img/sayy_thumbnail.jpg" alt="/" class="img-fluid">
@@ -957,7 +957,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
