--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                     <p class="text-muted my-4">Let's collaborate to turn your vision into a reality. Whether you're a private client seeking a unique publication or a business aiming to elevate your digital presence, I'M Eaindarey Ju Ju, your UI/UX Designer, is here to make it happen.
                                     </p>
                                     <div class="button-border mt-2">
-                                        <a href="assets/pdf/Eaindarey Ju Ju - UIUX Designer.pdf" class="pill-button">Download Cv</a>
+                                        <a href="assets/pdf/Eaindarey Ju Ju @2023.pdf" class="pill-button">Download Cv</a>
                                     </div>
                                 </div>
                             </div>
