--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
         <!--     Resume End    -->
 
         <!--  Service Start  -->
-        <section id="services" class="section pp-scrollable services" data-navigation-tooltip="SERVICES">
+        <section id="services" class="section pp-scrollable services" data-navigation-tooltip="SKILL">
             <div class="display-table">
                 <div class="display-content">
                     <div class="container">
@@ -774,7 +774,7 @@
         <!--   Service End   -->
 
         <!-- Portfolio Start -->
-        <section id="portfolio" class="section pp-scrollable portfolio" data-navigation-tooltip="PORTFOLIO">
+        <section id="portfolio" class="section pp-scrollable portfolio" data-navigation-tooltip="PROJECTS">
             <div class="display-table">
                 <div class="display-content">
                     <div class="container">
