--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Eaindarey</title>
-        <meta name="description" content="" />
-        <meta name="keywords" content="" />
+        <meta name="description" content="Eaindarey" />
+        <meta name="keywords" content="Eaindarey" />
         <meta name="author" content="eaindarey" />
 
         <!--  FavIcon  -->
