--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>Eaindarey</title>
-        <meta name="description" content="Eaindarey" />
-        <meta name="keywords" content="Eaindarey" />
-        <meta name="author" content="eaindarey" />
+        <meta name="description" content="Eaindarey Ju Ju - Experienced UI/UX Designer. Portfolio showcasing innovative user interface and user experience design solutions.">
+        <meta name="keywords" content="UI/UX designer, Eaindarey Ju Ju, user interface, user experience, portfolio">
+
 
         <!--  FavIcon  -->
         <link rel="apple-touch-icon" sizes="180x180" href="assets/img//apple-touch-icon.png">
