--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="image-border">
-                                    <img src="/assets/img/about.jpg" alt="/">
+                                    <img src="/assets/img/2024img.jpg" alt="/">
                                 </div>
                             </div>
                             <div class="col-lg-6 mt-4 mt-lg-0">
