--- a/index.html
+++ b/index.html
@@ -544,13 +544,32 @@
                                     <div class="border-style"></div>
                                 </div>
                                 <div class="timeline-items box-border">
+					 <!--    Item 0   -->
+                                    <div class="timeline-item">
+                                        <div class="timeline-icon"></div>
+                                        <div class="timeline-contents">
+                                            <div class="time-line-header">
+                                                <h6 class="timeline-title">Senior UI/UX Designer @ (PLUS IMPACT Pte. Ltd.)</h6>
+                                                <p class="timeline-year">Nov 2023 - Present</p>
+                                            </div>
+                                            <div class="timeline-content">
+                                                <p>I worked as a UI/UX Designer for a foreign company, where I was responsible for designing 
+							user-centric web and mobile applications.My responsibilities included conducting user research, 
+							creating wireframes, prototypes, and high-fidelity UI designs, and collaborating with cross-functional teams—including 
+							developers, product managers, and stakeholders—to deliver intuitive and visually engaging digital products.I focused on ensuring 
+							design solutions aligned with business goals and enhanced user satisfaction.Throughout my time in the role, 
+							I gained valuable experience working with diverse teams across different time zones, which enhanced my ability 
+							to adapt quickly and communicate effectively in a global work environment.</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                     <!--    Item 01   -->
                                     <div class="timeline-item">
                                         <div class="timeline-icon"></div>
                                         <div class="timeline-contents">
                                             <div class="time-line-header">
-                                                <h6 class="timeline-title">UI/UX Designer @ (Trionix IT System Custom Software Development)</h6>
-                                                <p class="timeline-year">Jul 2023 - Present</p>
+                                                <h6 class="timeline-title">UI/UX Designer @ (Trionix IT System Custom Software Development as Freelance)</h6>
+                                                <p class="timeline-year">Jul 2023 - Dec 2023</p>
                                             </div>
                                             <div class="timeline-content">
                                                 <p>I possess a strong expertise in user research, wireframing, prototyping, and interaction design. My skill set extends to crafting visually captivating designs that harmonize aesthetics and functionality.</p>
@@ -562,8 +581,8 @@
                                         <div class="timeline-icon"></div>
                                         <div class="timeline-contents">
                                             <div class="time-line-header">
-                                                <h6 class="timeline-title">UI/UX Designer @ (YOLO Travel and Tour)</h6>
-                                                <p class="timeline-year">Sept 2023 - Present</p>
+                                                <h6 class="timeline-title">UI/UX Designer @ (YOLO Travel and Tour as Freelance)</h6>
+                                                <p class="timeline-year">Sept 2023 - Mar 2024</p>
                                             </div>
                                             <div class="timeline-content">
                                                 <p>I have a strong proficiency in user research, wireframing, prototyping, and interaction design. I am skilled in creating visually appealing designs that strike a balance between aesthetics and functionality. Additionally, I excel at collaborating with cross-functional teams to ensure design alignment with business goals.</p>
